// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Adds namespace to complex styled-component 1`] = `
"
const styled = { div() {} };

const MyStyledComponent = styled.div\`
  background-color: yellow;
  color: {props => props.theme.color};
  
  .foo {
    border: 1px solid black;

    & .bar {
      background-color: blue;
    }
  }
\`;

      ↓ ↓ ↓ ↓ ↓ ↓

const styled = { div() {} };

const MyStyledComponent = styled.div\`
&& {
  background-color: yellow;
  color: {props => props.theme.color};
  
  .foo {
    border: 1px solid black;

    & .bar {
      background-color: blue;
    }
  }
}
\`;
"
`;

exports[`Adds namespace to simple styled-component 1`] = `
"
const styled = { div() {} };

const MyStyledComponent = styled.div\`
  background-color: 'yellow';
\`;

      ↓ ↓ ↓ ↓ ↓ ↓

const styled = { div() {} };

const MyStyledComponent = styled.div\`
&& {
  background-color: 'yellow';
}
\`;
"
`;

exports[`Uses a namespace specified in the options 1`] = `
"
const styled = { div() {} };

const MyStyledComponent = styled.div\`
  background-color: yellow;
  color: {props => props.theme.color};
  
  .foo {
    border: 1px solid black;

    & .bar {
      background-color: blue;
    }
  }
\`;

      ↓ ↓ ↓ ↓ ↓ ↓

const styled = { div() {} };

const MyStyledComponent = styled.div\`
.moreSpecific & {
  background-color: yellow;
  color: {props => props.theme.color};
  
  .foo {
    border: 1px solid black;

    & .bar {
      background-color: blue;
    }
  }
}
\`;
"
`;
